chore setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = viewland
 version = 0.0.1
-author = Example Author
+author = Yuchen Wu (Andy)
 author_email = author@example.com
-description = A small example package
+description = A package for visualising energy landscape data.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pypa/sampleproject
@@ -12,7 +12,7 @@ project_urls =
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+    Operating System :: POSIX :: Linux
 
 [options]
 include_package_data = true
