Create sphinx docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.0.1
 author = Yuchen Wu (Andy)
 author_email = author@example.com
 description = A package for visualising energy landscape data.
-long_description = file: README.md
+long_description = file: README.rst
 long_description_content_type = text/markdown
 url = https://github.com/pypa/sampleproject
 project_urls =
