--- a/.dockerignore
+++ b/.dockerignore
@@ -67,9 +67,6 @@ coverage.xml
 # Django stuff:
 *.log
 
-# Sphinx documentation
-docs/_build/
-
 # PyBuilder
 target/
 
@@ -92,6 +89,9 @@ venv/
 */*.swp
 */*/*.swp
 */*/*/*.swp
+
+# Sphinx documentation
+docs/
 
 # Custom folders
 data/
