--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,7 @@ author_email = author@example.com
 description = A package for visualising energy landscape data.
 long_description = file: README.rst
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
-project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+url = https://github.com/andywuy/landscape_visualiser
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
