--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,11 @@ classifiers =
 
 [options]
 include_package_data = true
+package_dir =
+	= src
 packages = find:
 python_requires = >=3.6
+
+[options.packages.find]
+where = src
 
