--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: docker-compose up -d
 
       - name: Test
-        run: docker-compose run viewland python -m pytest .
+        run: docker-compose run web python -m pytest .
